--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-fastapi
-uvicorn
-mangum
-psycopg2-binary
-python-dotenv
+fastapi>=0.104.1
+langchain-google-genai>=1.0.10
+langchain-core>=0.1.52
+langchain-community>=0.0.38
+langchain-pinecone>=0.1.3
+pinecone-client>=3.2.2
+python-multipart>=0.0.6
+python-dotenv>=1.0.0
+pydantic[email]>=2.5.0
+passlib[bcrypt]>=1.7.4
+psycopg2-binary>=2.9.9
+PyMuPDF>=1.23.14
